# onnx-runtime-rs

./: Cargo.toml  build.rs  hello  wrapper.h
ext/osx/: test.c
src/: lib.rs
test_model/: one.10.onnx
