[package]
name = "onnx-runtime"
version = "0.1.0"
authors = ["Aymeric Nunge <nunja@free.fr>"]
edition = "2018"
libc = "0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.51.1"

[profile.test] 
opt-level = 3